# elegoo-tumbller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  hardware-tests.md  physics.md  toolchain.cmake
.github/workflows/: unity-tests.yml
backup/: original_backup.hex
calculations/: balancing.md  pendulum2D.md  polarCoordinates.md
include/: ab1602.h  balance.h  board.h  button.h  color.h  command.h  constants.h  elegooKit.h  error.h  filter.h  hardware.hpp  i2c.h  i2c.hpp  interrupts.h  interrupts.hpp  kalman.h  led.h  motor.h  mpu6050.h  mpu6050.hpp  pid.h  pwm.h  serial.h  state.h  tests.h  timer.h  vectors.h
mocks/: mock_avr_delay.c  mock_avr_delay.h  mock_avr_io.c  mock_avr_io.h
src/: ab1602.c  balance.c  button.c  command.c  constants.h  error.c  filter.c  hardware.cpp  i2c.c  i2c.cpp  interrupts.c  interrupts.cpp  led.c  main.c  main.cpp  motor.c  motor.cpp  motor.hpp  mpu6050.c  mpu6050.cpp  pid.c  pwm.c  serial.c  serial.cpp  serial.hpp  state.c  timer.c
src/modules/: ab1602.c  balance.c  button.c  color.c  i2c.c  kalman.c  led.c  motor.c  mpu6050.c  serial.c  state.c  timer.c
tests/: allTests.c  buttonTests.c  i2cTests.c  interruptsTests.c  ledTests.c  motorTests.c  mpu6050Tests.c  serialTests.c  timerTests.c
